Don't add unnecessary quotes to the rhs of the descendant operator. bug 321547, r=brendan