js/src/jsemit.c
@@ -2262,6 +2262,11 @@ EmitElemOp(JSContext *cx, JSParseNode *pn, JSOp op, JSCodeGenerator *cg)
         if (!js_EmitTree(cx, cg, left))
             return JS_FALSE;
     }
+    /* The right side of the descendant operator is implicitly quoted. */
+    if (op == JSOP_DESCENDANTS && right->pn_op == JSOP_STRING &&
+        js_NewSrcNote(cx, cg, SRC_UNQUOTE) < 0) {
+        return JS_FALSE;
+    }
     if (!js_EmitTree(cx, cg, right))
         return JS_FALSE;
     if (js_NewSrcNote2(cx, cg, SRC_PCBASE, CG_OFFSET(cg) - top) < 0)
@@ -4953,7 +4958,7 @@ JS_FRIEND_DATA(JSSrcNoteSpec) js_SrcNoteSpec[] = {
     {"pcdelta",         1,      0,      1},
     {"assignop",        0,      0,      0},
     {"cond",            1,      0,      1},
-    {"reserved0",       0,      0,      0},
+    {"unquote",         0,      0,      0},
     {"hidden",          0,      0,      0},
     {"pcbase",          1,      0,     -1},
     {"label",           1,      0,      0},
